# Doraemon

./: .gitignore  README.md
src/a_star_planner/: CMakeLists.txt  package.xml  plugins.xml
src/a_star_planner/launch/: move_base.launch
src/a_star_planner/src/: a_star_ros_wrapper.cpp  path_planner.cpp  theta_star_planner.cpp
src/clean_robot_description/: CMakeLists.txt  package.xml
src/clean_robot_description/config/: costmap_common.yaml  local_costmap.yaml  mbf_nav.yaml  mbf_timing.yaml
src/clean_robot_description/launch/: factory_spawn.launch  mbf_nav.launch
src/clean_robot_description/scripts/: rect_map_editor.py
src/clean_robot_description/urdf/: clean_robot.urdf
src/clean_robot_description/worlds/: factory_50x70_3blocks.world
src/cleanrobot/: CMakeLists.txt  package.xml
src/cleanrobot/launch/: cartographer_localization.launch  cartographer_mapping.launch  cleanrobot_base.launch  cleanrobot_nav_flex.launch  depth_obstacle_runtime.launch  display.launch  mbf_nav.launch  orbbec_dual_depth_ground.launch  sensors.launch
src/cleanrobot/scripts/: cartographer_supervisor_node.py
src/cleanrobot_app_msgs/: CMakeLists.txt  package.xml
src/cleanrobot_app_msgs/msg/: CleanSchedule.msg  CleanTask.msg  CleanTaskCell.msg  MapAlignmentConfig.msg  MapVirtualWall.msg  OdometryState.msg  PgmData.msg  SlamJobState.msg  SlamState.msg  SystemReadiness.msg
src/cleanrobot_app_msgs/srv/: CommitCoverageRegion.srv  ExeTask.srv  GetOdometryStatus.srv  GetProfileCatalog.srv  GetSlamJob.srv  GetSlamStatus.srv  GetZonePlanPath.srv  OperateCoverageZone.srv  OperateMap.srv  OperateMapNoGoArea.srv  OperateMapVirtualWall.srv  OperateSchedule.srv  OperateSlamRuntime.srv  OperateTask.srv  PreviewAlignedRectSelection.srv  PreviewCoverageRegion.srv  RestartLocalization.srv  SubmitSlamCommand.srv
src/cleanrobot_description/: CMakeLists.txt  package.xml
src/cleanrobot_description/launch/: display.launch  robot_state_only.launch
src/cleanrobot_description/meshes/: down_camera.STL  front_laser.STL  laser.STL  left_camera.STL  left_wheel.STL  right_camera.STL  right_wheel.STL
src/cleanrobot_description/urdf/: clean_robot.urdf
src/cleanrobot_site_msgs/: CMakeLists.txt  package.xml
src/cleanrobot_site_msgs/msg/: CoverageZone.msg  MapNoGoArea.msg  PolygonRegion.msg
src/cleanrobot_site_msgs/srv/: CommitCoverageRegion.srv  ConfirmMapAlignmentByPoints.srv  ConfirmRectCoveragePlan.srv  GetZonePlanPath.srv  OperateCoverageZone.srv  OperateMapAlignment.srv  PreviewCoverageRegion.srv
src/coverage_constraints_nav/: CMakeLists.txt  package.xml  plugin.xml
src/coverage_constraints_nav/src/: keepout_constraint_layer.cpp
src/coverage_executor/: CMakeLists.txt  package.xml  setup.py
src/coverage_executor/config/: actuator_profiles.yaml
src/coverage_executor/launch/: executor.launch
src/coverage_executor/scripts/: executor_node.py
src/coverage_executor/test/: test_executor_fsm_revision_guard.py  test_plan_loader_revision_scope.py
src/coverage_msgs/: CMakeLists.txt  package.xml
src/coverage_msgs/action/: PlanCoverage.action
src/coverage_msgs/msg/: MapConstraints.msg  Polygon2D.msg  RunProgress.msg  TaskState.msg  ZoneGeometry.msg
src/coverage_planner/: CMakeLists.txt  package.xml  setup.py
src/coverage_planner/config/: map_constraints_example.json  planner_server_defaults.yaml
src/coverage_planner/launch/: frontend_editor_backend.launch  planner_server.launch
src/coverage_planner/scripts/: cartographer_runtime_manager_node.py  localization_lifecycle_manager_node.py  map_asset_manager_node.py  map_asset_service_node.py  map_constraints_node.py  odometry_health_node.py  planner_server_node.py  profile_catalog_service_node.py  rect_zone_planner_node.py  site_editor_service_node.py  slam_api_service_node.py  slam_runtime_manager_node.py  static_map_manager_node.py
src/coverage_planner/test/: test_backend_runtime_smoke.py  test_constraints_hole_free_regions.py  test_localization_lifecycle_revision_guard.py  test_map_asset_import_flow.py  test_map_constraints_revision_guard.py  test_ops_store_revision_binding.py  test_plan_store_map_candidate_flow.py  test_plan_store_rebind_map_identity.py  test_plan_store_site_editor_revision_scope.py  test_planner_keepout_path_safety.py  test_planner_server_revision_guard.py  test_rect_zone_planner_revision_guard.py  test_runtime_common_script.py  test_site_editor_verified_map_guard.py  test_slam_api_state.py  test_slam_job_runner.py  test_slam_runtime_adapter.py  test_slam_workflow_executor.py
src/coverage_planner/tools/: check_revision_db_health.py  check_ros_contracts.py  db_inspect.py  import_map_assets.py  map_constraints_tool.py  migrate_map_assets.py  run_backend_production_acceptance.py  run_backend_runtime_smoke.py  run_revision_workflow_acceptance.py  run_single_block.py  send_plan_goal.py  site_editor_smoke_test.py  test_plan_coverage.py
src/coverage_task_manager/: CMakeLists.txt  package.xml  setup.py
src/coverage_task_manager/config/: mode_profiles.yaml  mode_profiles_example.yaml  schedules_example.yaml  schedules_monday_0810.yaml
src/coverage_task_manager/launch/: contract_services.launch  task_manager.launch  task_system.launch
src/coverage_task_manager/scripts/: exe_task_service_node.py  schedule_api_service_node.py  task_api_service_node.py  task_manager_node.py
src/coverage_task_manager/test/: test_app_parallel_services.py  test_exe_task_contract.py  test_executor_fsm_command_contract.py  test_scheduler_contract.py  test_system_readiness.py  test_task_command_contract.py  test_task_prepare_for_task_revision_scope.py  test_task_runtime_gate_contract.py  test_verified_map_binding_guards.py
src/dock_tracker/: CMakeLists.txt  package.xml
src/fdilink_ahrs/: package.xml
src/landmark/: CMakeLists.txt  package.xml
src/mppi_controller/: CMakeLists.txt  critics.xml  lp_plugin.xml  package.xml
src/my_cluster_tracker/: CMakeLists.txt  package.xml
src/my_docking_controller/: CMakeLists.txt  package.xml
src/my_msg_srv/: CMakeLists.txt  package.xml
src/robot_hw_bridge/: CMakeLists.txt  package.xml
(+690 files in other folders)
