<?xml version="1.0"?>
<package format="2">
  <name>cleanrobot</name>
  <version>0.0.0</version>
  <description>
    Runtime bringup package for the cleanrobot platform.
    This package owns robot-level launch files, runtime navigation configuration,
    sensor bringup wiring, and a small set of legacy manual debug launches.
    Formal SLAM runtime ownership now lives in coverage_planner.
  </description>

  <maintainer email="sunnybaer@todo.todo">sunnybaer</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rosparam</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>robot_runtime_flags</exec_depend>
  <exec_depend>cartographer_ros</exec_depend>
  <exec_depend>cleanrobot_description</exec_depend>
  <exec_depend>coverage_planner</exec_depend>
  <exec_depend>coverage_constraints_nav</exec_depend>
  <exec_depend>ground_segmentation_tracking</exec_depend>
  <exec_depend>vanjee_lidar_sdk</exec_depend>
  <exec_depend>fdilink_ahrs</exec_depend>
  <exec_depend>orbbec_camera</exec_depend>
  <exec_depend>my_planner</exec_depend>
  <exec_depend>mppi_controller</exec_depend>
  <exec_depend>theta_star_planner_mbf</exec_depend>
  <exec_depend>mbf_costmap_nav</exec_depend>
  <export/>
</package>
