<?xml version="1.0"?>
<package format="2">
  <name>cleanrobot_app_msgs</name>
  <version>0.1.0</version>
  <description>
    Interface package for application-level ROS contracts, including task,
    schedule, SLAM, odometry, readiness, and user-facing workflow messages and services.
    This package is the canonical long-term home for app-side contracts.
  </description>

  <maintainer email="dev@company.com">dev</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>

  <build_export_depend>message_generation</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <export>
  </export>
</package>
