<?xml version="1.0"?>
<package format="2">
  <name>coverage_constraints_nav</name>
  <version>0.1.0</version>
  <description>Keepout constraint costmap layer for commercial cleaning robots.</description>

  <maintainer email="dev@company.com">dev</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>costmap_2d</depend>
  <depend>coverage_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <export>
    <costmap_2d plugin="${prefix}/plugin.xml"/>
  </export>
</package>
