<?xml version="1.0"?>
<package format="2">
  <name>coverage_executor</name>
  <version>0.1.0</version>
  <description>Coverage execution (FSM + MBF + cleaning actuator)</description>

  <maintainer email="dev@company.com">dev</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>actionlib</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>mbf_msgs</depend>
  <depend>my_msg_srv</depend>

  <depend>coverage_msgs</depend>
  <depend>coverage_planner</depend>

  <exec_depend>python3</exec_depend>
</package>
