<?xml version="1.0"?>
<package format="2">
  <name>coverage_msgs</name>
  <version>0.1.0</version>
  <description>
    Internal coverage-domain message/action package for commercial cleaning workflow.
    This package owns planning/execution progress, task-state and map-constraint interfaces
    used inside the coverage planner/executor/task-manager stack.
  </description>

  <maintainer email="dev@yourcompany.com">dev</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- build -->
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <!-- runtime -->
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
  </export>
</package>
