<?xml version="1.0"?>
<package format="2">
  <name>coverage_planner</name>
  <version>0.1.0</version>
  <description>Coverage planner (Fields2Cover) with SQLite plan store and optional RViz debug markers.</description>

  <maintainer email="dev@yourcompany.com">dev</maintainer>
  <license>Proprietary</license>

  <!-- build system -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- runtime deps (python nodes + msgs) -->
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>cartographer_ros_msgs</depend>
  <depend>robot_runtime_flags</depend>
  <depend>robot_runtime_flags_msgs</depend>

  <!-- your action/msg package -->
  <depend>cleanrobot_app_msgs</depend>
  <depend>cleanrobot_site_msgs</depend>
  <depend>coverage_msgs</depend>

  <!-- python packaging helpers -->
  <exec_depend>python3</exec_depend>

  <export>
  </export>
</package>
