<?xml version="1.0"?>
<package format="2">
  <name>coverage_task_manager</name>
  <version>0.1.0</version>
  <description>Task layer: mission orchestration (start/pause/resume/cancel), low-battery auto-dock/charge/undock, and forwarding to executor.</description>

  <maintainer email="dev@company.com">dev</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>actionlib</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>diagnostic_updater</depend>
  <depend>diagnostic_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>mbf_msgs</depend>
  <depend>std_srvs</depend>
  <depend>rosparam</depend>

  <depend>coverage_msgs</depend>
  <depend>coverage_planner</depend>
  <depend>my_msg_srv</depend>

  <exec_depend>python3</exec_depend>
</package>
