<?xml version="1.0"?>
<package format="2">
  <name>ground_segmentation_tracking</name>
  <version>0.1.0</version>
  <description>Ground segmentation with obstacle clustering, tracking and visualization.</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>

  <depend>tf</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>tf2_eigen</depend>

  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>

