<?xml version="1.0"?>
<package format="2">
  <name>my_docking_controller</name>
  <version>0.1.0</version>
  <description>A ROS 1 implementation of the SmoothControlLaw for docking with Action interface.</description>

  <maintainer email="user@todo.com">User</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>