<?xml version="1.0"?>
<package format="2">
  <name>robot_hw_bridge</name>
  <version>0.1.0</version>
  <description>
    Hardware bridges for the real robot:
      - mcore_tcp_bridge: TCP protocol to chassis (M-core), publishes /combined_status and /battery_state, consumes /cmd_vel.
      - station_tcp_bridge: TCP protocol to station (dock), publishes /station_status and consumes /station/control.
      - dock_supply_manager: fine docking + supply/charge state machine (station + robot valves + charge relay).
  </description>

  <maintainer email="dev@company.com">dev</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>

  <depend>my_msg_srv</depend>
  <depend>dock_tracker</depend>
  <depend>my_docking_controller</depend>

  <exec_depend>python3</exec_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
